refactor code and make persistent work

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,9 +5,9 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/World/Maps/world.World
-GameDefaultMap=/Game/World/Maps/world.World
-GlobalDefaultGameMode=/Script/Engine.GameMode
+EditorStartupMap=/Game/World/Maps/EmptyWorld.EmptyWorld
+GameDefaultMap=/Game/World/Maps/EmptyWorld.EmptyWorld
+GlobalDefaultGameMode=/Game/Blueprints/DomeGameMode.DomeGameMode_C
 GameInstanceClass=/Script/Engine.GameInstance
 
 [/Script/Engine.Engine]
