--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -97,6 +97,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Input_Three",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Three)
 +ActionMappings=(ActionName="Input_Four",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Four)
 +ActionMappings=(ActionName="Input_Five",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Five)
++ActionMappings=(ActionName="Input_Six",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Six)
 +ActionMappings=(ActionName="PlayPauseSequence",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=P)
 +ActionMappings=(ActionName="ClearSequence",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=O)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
