fix for map change and some assets

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -9,6 +9,7 @@ EditorStartupMap=/Game/World/Maps/EmptyWorld.EmptyWorld
 GameDefaultMap=/Game/World/Maps/EmptyWorld.EmptyWorld
 GlobalDefaultGameMode=/Game/Blueprints/DomeGameMode.DomeGameMode_C
 GameInstanceClass=/Script/Engine.GameInstance
+bUseSplitscreen=False
 
 [/Script/Engine.Engine]
 GameEngine=/Script/DisplayCluster.DisplayClusterGameEngine
